# AoC_2023

./: .ghci  AoC2023.cabal  AoC_2023.cabal  README.md  Solution.hs
D02/: D02.hs  Main.hs  Tests.hs
D03/: D03.hs  Main.hs  Tests.hs
D04/: D04.hs  Main.hs  Tests.hs
D06/: D06.hs  Main.hs  Tests.hs
DD01/: D01.hs  Main.hs  Tests.hs
DXX/: DXX.hs  Main.hs  Tests.hs
d01/: solution.hs
