cabal-version:      3.0
version:            0.1.0
name:               AoC2023
synopsis:           My solutions for https://adventofcode.com/2023
author:             Stefan Scheller
license:            Unlicense
license-file:       LICENSE
build-type:         Simple

library 
  exposed-modules:  D01, D02, D03, D04, D06
  build-depends:    base, containers, extra, split, regex-tdfa ^>= 1.3.2
  hs-source-dirs:   D01, D02, D03, D04, D06
  default-language: GHC2021

executable d01
  main-is:          D01/Main.hs
  build-depends:    base, AoC2023
  default-language: GHC2021


test-suite d01-test
  type:             exitcode-stdio-1.0
  main-is:          D01/Tests.hs
  build-depends:    base, HUnit, AoC2023
  default-language: GHC2021

executable d02
  main-is:          D02/Main.hs
  build-depends:    base, AoC2023
  default-language: GHC2021

test-suite d02-test
  type:             exitcode-stdio-1.0
  main-is:          D02/Tests.hs
  build-depends:    base, HUnit, AoC2023
  default-language: GHC2021

executable d03
  main-is:          D03/Main.hs
  build-depends:    base, AoC2023
  default-language: GHC2021

test-suite d03-test
  type:             exitcode-stdio-1.0
  main-is:          D03/Tests.hs
  build-depends:    base, HUnit, AoC2023
  default-language: GHC2021

executable d04
  main-is:          D04/Main.hs
  build-depends:    base, AoC2023
  default-language: GHC2021

test-suite d04-test
  type:             exitcode-stdio-1.0
  main-is:          D04/Tests.hs
  build-depends:    base, HUnit, AoC2023
  default-language: GHC2021

executable d06
  main-is:          D06/Main.hs
  build-depends:    base, AoC2023
  default-language: GHC2021

test-suite d06-test
  type:             exitcode-stdio-1.0
  main-is:          D06/Tests.hs
  build-depends:    base, HUnit, AoC2023
  default-language: GHC2021
